tests/invalid/parent2.m
% This is part of the test_nested.m test case.

:- module parent2.
:- interface.

:- include_module child.
